Criando fluxo para insercao de medicos
