# src/main/java/com/dcc604/clinica/mapeamento/medico/MedicoResponseMapeador.java
@@ -1,0 +1,10 @@
+package com.dcc604.clinica.mapeamento.medico;
+
+import com.dcc604.clinica.modelos.Medico;
+import io.swagger.model.MedicoResponse;
+import org.mapstruct.Mapper;
+
+@Mapper(componentModel = "spring")
+public interface MedicoResponseMapeador {
+    MedicoResponse fromMedico(Medico from);
+}
