# src/main/java/com/dcc604/clinica/modelos/Medico.java
@@ -1,0 +1,28 @@
+package com.dcc604.clinica.modelos;
+
+import com.dcc604.clinica.dtos.CriarMedicoDTO;
+import io.swagger.model.Especialidade;
+import javax.persistence.Entity;
+import lombok.*;
+
+@Entity
+@Data
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+@EqualsAndHashCode(callSuper = true)
+public class Medico extends Funcionario {
+    private Integer crm;
+    private Especialidade especialidade;
+
+    public Medico(CriarMedicoDTO criarMedicoDTO) {
+        this.carteiraDeTrabalho = criarMedicoDTO.getCarteiraDeTrabalho();
+        this.dataContratacao = criarMedicoDTO.getDataContratacao();
+        this.nome = criarMedicoDTO.getNome();
+        this.cpf = criarMedicoDTO.getCpf();
+        this.salario = criarMedicoDTO.getSalario();
+        this.funcao = criarMedicoDTO.getFuncao();
+        this.crm = criarMedicoDTO.getCrm();
+        this.especialidade = criarMedicoDTO.getEspecialidade();
+    }
+}
